2006-04-19  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_Event.py: Add "personal" attribute to events.

2006-04-18  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditName.py: fix call for MonitoredDataType
	* src/Editors/_EditChildRef.py: fix call for MonitoredDataType
	* src/RelLib/__init__.py: added _EventType
	* src/RelLib/_EventType.py: added
	* src/RelLIb/Makefile.am: added _EventType.py

2006-04-18  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/FamilyGroup.py: update for RelLib changes
	* src/plugins/IndivComplete.py: update for RelLib changes

2006-04-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: new types
	* src/GrampsDb/_ConstXML.py: new types
	* src/GrampsDb/_WriteXML.py: new types
	* src/Editors/_EditUrl.py: new types
	* src/Editors/_EditPerson.py: new types
	* src/Editors/_EditRepository.py: new types
	* src/Editors/_EditName.py: new types
	* src/Editors/_EditChildRef.py: new types
	* src/RelLib/__init__.py: new types
	* src/RelLib/_Url.py: new types
	* src/RelLib/_RepositoryType.py: new types
	* src/RelLib/_GrampsType.py: new types
	* src/RelLib/_UrlType.py: new types
	* src/RelLib/_Repository.py: new types
	* src/RelLib/_NameType.py: new types
	* src/RelLib/_ChildRefType.py: new types
	* src/DisplayTabs.py: new types
	* src/GrampsWidgets.py: new types
	* src/Utils.py: new types
	* src/Editors/_EditFamily.py: button messages
	* src/DisplayTabs.py: remove property button stuff

2006-04-18  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.dtd: Update.
	* data/grampsxml.rng: Update.
	* src/GrampsDb/_ReadXML.py: Parse old and new XML.
	* src/GrampsDb/_WriteXML.py (dump_child_ref, dump_person_ref): Add
	methods.
	* src/RelLib/_ChildRef.py (ChildRef.set_mother_relation): Adapt to
	new types;
	(ChildRef.set_father_relation): Adapt to new types.
	* src/RelLib/_GrampsType.py (GrampsType.get_custom): Add method.
	(GrampsType.set): Allow setting from the same class instance.