@@ -123,12 +123,10 @@ class Event(PrimaryObject,SourceBase,NoteBase,MediaBase,DateBase,PlaceBase):
             self.description = source.description
             self.type = source.type
             self.cause = source.cause
-            self.personal = source.personal
         else:
             self.description = ""
             self.type = (Event.CUSTOM,"")
             self.cause = ""
-            self.personal = True
 
     def serialize(self):
         """
@@ -152,7 +150,7 @@ class Event(PrimaryObject,SourceBase,NoteBase,MediaBase,DateBase,PlaceBase):
                 SourceBase.serialize(self),
                 NoteBase.serialize(self),
                 MediaBase.serialize(self),
-                self.change, self.marker, self.private, self.personal)
+                self.change, self.marker, self.private)
 
     def unserialize(self,data):
         """
@@ -166,7 +164,7 @@ class Event(PrimaryObject,SourceBase,NoteBase,MediaBase,DateBase,PlaceBase):
         (self.handle, self.gramps_id, self.type, date,
          self.description, self.place, self.cause,
          source_list, note, media_list,
-         self.change, self.marker, self.private, self.personal) = data
+         self.change, self.marker, self.private) = data
 
         DateBase.unserialize(self,date)
         MediaBase.unserialize(self,media_list)
